--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>หนมๆ</title>
+<title>หนมๆๆ</title>
 <style>
   body {
     background-color: #ffe4f1; /* ชมพูอ่อน */
@@ -123,4 +123,3 @@
 
 </body>
 </html>
-
